--- a/Telas/src/main/java/com/mycompany/telas/lancarFreqProfessor.form
+++ b/Telas/src/main/java/com/mycompany/telas/lancarFreqProfessor.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -58,9 +58,12 @@
                       <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="384" max="32767" attributes="0"/>
               </Group>
-              <Component id="jScrollPane3" alignment="0" pref="619" max="32767" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
+                  <Component id="jScrollPane3" min="-2" pref="280" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -139,57 +142,24 @@
                   <Color blue="33" green="33" red="33" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="4">
+                  <Table columnCount="2" rowCount="4">
                     <Column editable="true" title="" type="java.lang.String">
                       <Data value="Fulano da Silva"/>
                       <Data value="Beltrano Ferreira"/>
                       <Data value="Ciclano de Souza"/>
                       <Data value="Maria Vieira"/>
                     </Column>
-                    <Column editable="true" title="25/01" type="java.lang.String">
-                      <Data value="P"/>
-                      <Data value="F"/>
-                      <Data value="P"/>
-                      <Data value="P"/>
-                    </Column>
-                    <Column editable="true" title="27/01" type="java.lang.String">
-                      <Data value="P"/>
-                      <Data value="P"/>
-                      <Data value="P"/>
-                      <Data value="P"/>
-                    </Column>
-                    <Column editable="true" title="01/02" type="java.lang.String">
-                      <Data value="F"/>
-                      <Data value="P"/>
-                      <Data value="P"/>
-                      <Data value="P"/>
-                    </Column>
-                    <Column editable="true" title="03/02" type="java.lang.String">
-                      <Data value="F"/>
-                      <Data value="P"/>
-                      <Data value="F"/>
-                      <Data value="P"/>
+                    <Column editable="true" title="Faltas" type="java.lang.Integer">
+                      <Data value="1"/>
+                      <Data value="5"/>
+                      <Data value="0"/>
+                      <Data value="1"/>
                     </Column>
                   </Table>
                 </Property>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
