Correção tela de notas do aluno

--- a/Telas/src/main/java/com/mycompany/telas/notaFreqAluno.form
+++ b/Telas/src/main/java/com/mycompany/telas/notaFreqAluno.form
@@ -55,7 +55,7 @@
                               <Component id="labelNomeAluno" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="0" pref="452" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="446" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -86,7 +86,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="SansSerif" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Mat&#xed;cula: 11112233344"/>
+            <Property name="text" type="java.lang.String" value="Matr&#xed;cula: 11112233344"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="labelNomeAluno">
