--- a/sistemaGestaoDiscente/src/main/java/com/mycompany/telas/cadastrarAluno.form
+++ b/sistemaGestaoDiscente/src/main/java/com/mycompany/telas/cadastrarAluno.form
@@ -70,7 +70,10 @@
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="labelPassword2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="txtPassword2" min="-2" pref="181" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="buttonRegister" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txtPassword" min="-2" pref="181" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                       <Component id="labelLogoSGD1" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -103,9 +106,11 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="labelPassword2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtPassword2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtPassword" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                  <Component id="buttonRegister" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -135,7 +140,7 @@
             <Property name="text" type="java.lang.String" value="Matr&#xed;cula"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="txtPassword2">
+        <Component class="javax.swing.JPasswordField" name="txtPassword">
         </Component>
         <Component class="javax.swing.JLabel" name="labelPassword2">
           <Properties>
@@ -153,6 +158,15 @@
         <Component class="javax.swing.JTextField" name="txtUser1">
         </Component>
         <Component class="javax.swing.JTextField" name="txtUser2">
+        </Component>
+        <Component class="javax.swing.JButton" name="buttonRegister">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Cadastrar"/>
+            <Property name="actionCommand" type="java.lang.String" value="Cadastrar"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonRegisterActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
