--- a/sistemaGestaoDiscente/src/main/java/com/mycompany/telas/telaLogin.form
+++ b/sistemaGestaoDiscente/src/main/java/com/mycompany/telas/telaLogin.form
@@ -133,6 +133,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Entrar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonLoginActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="labelLogoSGD1">
           <Properties>
