Finalização verificar turma e disciplina cadastradas

--- a/sistemaGestaoDiscente/src/main/java/com/mycompany/telas/homeAdmin.form
+++ b/sistemaGestaoDiscente/src/main/java/com/mycompany/telas/homeAdmin.form
@@ -35,12 +35,12 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CadastroAActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+            <MenuItem class="javax.swing.JMenuItem" name="CadastroDisc">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cadastrar Disciplina"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CadastroDiscActionPerformed"/>
               </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="CadastroP">
